show a list of categories, and tags client side
also put the swag init command into the taskfile.
