# server/docs/swagger.json
@@ -93,6 +93,148 @@
                 }
             }
         },
+        "/messages/aggregate/pullCategories": {
+            "get": {
+                "description": "Sync endpoint to pull all changes to categories for this account.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "Get summary of the categories in this account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "category",
+                        "name": "category",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last updated time",
+                        "name": "updatedAt",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Batch size",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/PullCategoriesResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/aggregate/pullTags": {
+            "get": {
+                "description": "Sync endpoint to pull all changes to tags for this account.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "Get summary of the tags in this account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tag",
+                        "name": "tag",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last updated time",
+                        "name": "updatedAt",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Batch size",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/PullTagsResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/pull": {
+            "get": {
+                "description": "Sync endpoint to pull all changes to messages for this account.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "Get Messages",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "messageid",
+                        "name": "messageId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last updated time",
+                        "name": "updatedAt",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Batch size",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/PullMessagesResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/pullStream": {
+            "get": {
+                "description": "Sync endpoint to allow for for push from server to client of changes to messages.",
+                "produces": [
+                    "text/event-stream"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "Stream Messages",
+                "responses": {}
+            }
+        },
         "/people/pull": {
             "get": {
                 "description": "Pulls the people database to be local",
@@ -107,7 +249,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/people.PullPeopleResponse"
+                            "$ref": "#/definitions/PullPeopleResponse"
                         }
                     }
                 }
@@ -115,14 +257,78 @@
         }
     },
     "definitions": {
+        "CategoryInfo": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "messageCount": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "CheckpointCategory": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "CheckpointMessages": {
+            "type": "object",
+            "properties": {
+                "messageId": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "CheckpointPerson": {
+            "type": "object",
+            "properties": {
+                "personId": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "CheckpointTag": {
+            "type": "object",
+            "required": [
+                "tag",
+                "updatedAt"
+            ],
+            "properties": {
+                "tag": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "GmailEntry": {
             "type": "object",
             "required": [
                 "additionalReceivers",
+                "categories",
                 "createdAt",
                 "headers",
                 "historyId",
                 "internalDate",
+                "isDeleted",
                 "labels",
                 "messageId",
                 "receivedAt",
@@ -131,6 +337,7 @@
                 "sender",
                 "snippet",
                 "subject",
+                "tags",
                 "threadId",
                 "updatedAt",
                 "userId"
@@ -143,6 +350,12 @@
                         "items": {
                             "$ref": "#/definitions/PersonInfo"
                         }
+                    }
+                },
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 },
                 "createdAt": {
@@ -158,7 +371,12 @@
                     "type": "integer"
                 },
                 "internalDate": {
+                    "description": "The internal message creation timestamp (epoch ms), which determines ordering in the inbox. For normal SMTP-received email, this represents the time the message was originally accepted by Google, which is more reliable than the Date header. However, for API-migrated mail, it can be configured by client to be based on the Date header.",
                     "type": "integer"
+                },
+                "isDeleted": {
+                    "description": "generated by us",
+                    "type": "boolean"
                 },
                 "labels": {
                     "type": "array",
@@ -170,6 +388,7 @@
                     "type": "string"
                 },
                 "receivedAt": {
+                    "description": "probaly use internalDate",
                     "type": "string"
                 },
                 "receiver": {
@@ -192,6 +411,12 @@
                 },
                 "subject": {
                     "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "threadId": {
                     "type": "string"
@@ -288,6 +513,85 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "PullCategoriesResponse": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/CategoryInfo"
+                    }
+                },
+                "checkpoint": {
+                    "$ref": "#/definitions/CheckpointCategory"
+                }
+            }
+        },
+        "PullMessagesResponse": {
+            "type": "object",
+            "properties": {
+                "checkpoint": {
+                    "$ref": "#/definitions/CheckpointMessages"
+                },
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GmailEntry"
+                    }
+                }
+            }
+        },
+        "PullPeopleResponse": {
+            "type": "object",
+            "properties": {
+                "checkpoint": {
+                    "$ref": "#/definitions/CheckpointPerson"
+                },
+                "people": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GooglePerson"
+                    }
+                }
+            }
+        },
+        "PullTagsResponse": {
+            "type": "object",
+            "required": [
+                "categories",
+                "checkpoint"
+            ],
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/TagInfo"
+                    }
+                },
+                "checkpoint": {
+                    "$ref": "#/definitions/CheckpointTag"
+                }
+            }
+        },
+        "TagInfo": {
+            "type": "object",
+            "required": [
+                "messageCount",
+                "tag",
+                "updatedAt"
+            ],
+            "properties": {
+                "messageCount": {
+                    "type": "integer"
+                },
+                "tag": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -1398,20 +1702,6 @@
                 }
             }
         },
-        "people.PullPeopleResponse": {
-            "type": "object",
-            "properties": {
-                "checkpoint": {
-                    "$ref": "#/definitions/people.SyncCheckpoint"
-                },
-                "people": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/GooglePerson"
-                    }
-                }
-            }
-        },
         "people.Relation": {
             "type": "object",
             "properties": {
@@ -1567,17 +1857,6 @@
                 },
                 "updateTime": {
                     "description": "UpdateTime: Output only. **Only populated in `person.metadata.sources`.**\nLast update timestamp of this source.",
-                    "type": "string"
-                }
-            }
-        },
-        "people.SyncCheckpoint": {
-            "type": "object",
-            "properties": {
-                "personId": {
-                    "type": "string"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
