# server/main.go
@@ -66,6 +66,8 @@ func main() {
 	r.GET("/api/messages/push", messages.PushMessage)
 	r.GET("/api/messages/pullStream", middleware.StreamHeaders(), messages.PullStream)
 	r.GET("/api/messages/categories", aggregate.CountCategories)
+	r.GET("/api/messages/aggregate/pullCategories", aggregate.PullCategories)
+	r.GET("/api/messages/aggregate/pullTags", aggregate.PullTags)
 	// THIS IS A DEBUG ENDPOINT
 	r.POST("/api/messages/:messageId/redo/:userId", messages.ReInjest)
 	r.POST("/api/messages/sync", messages.ForceSyncMessages)
